Labs/Lab4/multi-pod/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: lab
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: registry.cloud.kt.com/66bisoga/labmysql:1.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql  
      imagePullSecrets:
      - name: mysecret
      nodeSelector:
        key: worker
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
