Labs/Lab4/multi-pod/exdb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dbaas-mysql #service
  namespace: lab
spec:
  type: ClusterIP
  ports:
    - name: mysqldb
      port: 3306
      targetPort: 3306

---
apiVersion: v1
kind: Endpoints
metadata:
  name: dbaas-mysql #service
  namespace: lab
subsets:
- addresses:
  - ip: 211.34.229.56 #db서버의 ip
  ports:
  - name: mysqldb
    port: 3306
    protocol: TCP
