Labs/Lab4/multi-pod/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: lab
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  type: ClusterIP
