Labs/Lab4/multi-pod/dest-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: department-service
spec:
  host: department-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
